--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
-    padding: 0;
-    width: 100%;
+    padding: 40px;
     background-color: #f6f6fa;
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
@@ -16,8 +15,6 @@ ol {
 }
 
 .wrapper {
-    margin: 40px auto;
-    width: 1200px;
     display: flex;
     flex-direction: row-reverse;
     background-color: #ffffff;
@@ -235,4 +232,65 @@ ol {
     color: #000;
     font-weight: 700;
     line-height: normal;
+}
+
+@media screen and (max-width: 992px) {
+    body {
+        padding: 20px;
+    }
+
+    .main-content {
+        padding: 40px;
+    }
+}
+
+@media screen and (max-width: 870px) {
+    .sidebar {
+        width: 250px;
+    }
+
+    .my-photo {
+        width: 250px;
+    }
+
+    .sidebar-content {
+        padding: 20px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    body {
+        padding: 0;
+    }
+
+    .sidebar {
+        width: 200px;
+    }
+
+    .my-photo {
+        width: 200px;
+    }
+
+    .main-content {
+        padding: 20px;
+    }
+
+    .my-name {
+        font-size: 28px;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .wrapper {
+        flex-direction: column;
+    }
+
+    .sidebar {
+        width: 100%;
+        padding: 20px;
+    }
+
+    .my-photo {
+        width: 100%;
+    }
 }
